static/css/s2.css
/* ... */
#globalWarningMessage .close {
 float: right;
 cursor: pointer;
 font-size: 20px;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
}
.readerPanelBox {
  position: absolute;
  height: 100%;
  width: 100%;
}
.readerPanelBox + .readerPanelBox {
  border-left: 1px solid #eee;
}
.readerPanelBox.sidebar {
  border-left: none;
}
.readerPanel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: inherit;
  font-family: 'HebrewInEnglish Text Font', "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.readerContent {
  width: 100%;
  height: calc(100% - 60px);
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.readerContent .readerError {
  padding: 100px 150px;
}
.readerContent .readerError .readerErrorText {
  padding-top: 20px;
  font-size: .8em;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  box-sizing: border-box;
  background-color: inherit;
}
.textColumn .loadingMessage.base,
.sheetsInPanel .loadingMessage {
  margin: 30px 0;
  color: #999;
  text-align: center;
  font-weight: lighter;
  font-style: normal;
  font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  /*border-bottom: 4px solid #E6E5E6;*/
  padding: 0 6px 4px;
}
.textColumn .loadingMessage.base.prev {
  margin: 70px 0 0 0;
}
.textColumn .loadingMessage.base.next {
  margin: 30px 0 70px;
  height: calc(100% - 128px);  /* The 128px here appears to be the minimum needed to keep a line on the screen when scrolling passes loaded content) */
}
.textColumn .textRange.loading + .textRange.loading {
  display: none;
}
.he {
  font-size: 122%;
}
.int-he .int-he {
  font-size: inherit;
}
.readerPanel .he {
  font-family: "Taamey Frank", "adobe-garamond-pro", "Crimson Text", Georgia, "Times New Roman", serif;
  direction: rtl;
  text-align: right;
}
.interface-hebrew .readerPanel .en{
  direction: ltr;
}
.interface-hebrew .readerPanel .contentInner,
.interface-hebrew .readerPanel .columnLayout,
.interface-hebrew .readerControls,
.interface-hebrew .readerPanel .textRange,
.interface-hebrew .readerPanel .sheetContent,
.interface-hebrew .readerPanel .readerNavMenu .gridBox,
.interface-hebrew .readerPanel.bilingual .readerNavMenu .gridBox,
.readerPanel.hebrew .readerNavSection,
.readerPanel.hebrew .readerNavMenu .gridBox {
  direction: rtl;
}
.interface-english .readerPanel.hebrew .readerNavMenu .readerTocResources .gridBox {
  direction: ltr;
}
.interface-english .readerPanel .readerNavMenu,
.readerPanel.english .readerNavSection,
.readerPanel.english .readerNavMenu .gridBox{
  direction: ltr;
}
.readerPanel.bilingual .readerNavSection,
.readerPanel.bilingual .readerNavMenu .gridBox {
  direction: ltr;
}
.readerPanel.english .he {
  display: none;
}
.readerPanel.english .he.heOnly{
  display: inline;
  text-align: right;
}
.readerPanel.english .en {
  display: inline;
}
.readerPanel.hebrew .he {
  display: inline;
  text-align: right;
}
.readerPanel .recentPanel .sheetLink.recentItem .he{
  font-family: "adobe-garamond-pro", "Taamey Frank", "Crimson Text", Georgia, serif;
}
.readerPanel.hebrew .en {
  display: none;
}
.readerPanel.english .heOnly .he,
.readerPanel.bilingual .heOnly .he {
  display: inline;
}
.languageToggle {
  display: inline;
  line-height: 32px;
}
.languageToggle img {
  opacity: 0.4;
  height: 18px;
}
.loadingMessage {
  font-size: 14px;
  font-style: italic;
}
.bilingual .loadingMessage .he {
  display: none;
}
.readerPanel.light {
  background-color: white;
}
.readerPanel.sepia {
  background-color: #f7f7f7;
}
.readerPanel.dark {
  background-color: #333331;
}
.readerNavMenu,
.homeFeedWrapper {
  position: absolute;
  display: flex;
  flex-direction: column;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  z-index: 101;
}
.readerNavMenu .content,
.homeFeedWrapper .content {
  position: relative;
  box-sizing: border-box;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  font-size: 16px;
}
.readerNavMenu .content {
  padding: 60px 0 0 0;
}
.singlePanel .readerNavMenu .content {
  padding: 85px 0 0 0;
}
.singlePanel .readerNavMenu .categoryColorLine {
  top: 60px;
}
.readerNavMenu.compare .content,
.readerNavCategoryMenu.compare .content {
  padding: 30px 10px;
}
.readerNavMenu .content .contentInner {
  width: 680px;
  margin: 0 auto;
  min-height: 520px;
  max-width: 100%;
  box-sizing: border-box;
  padding-bottom: 70px;
}
.homeFeedWrapper .content .contentInner {
  max-width: none;
}
.homeFeedWrapper.userStats .content .contentInner {
  max-width: 660px;
  margin: 0 auto;
}
.navTitle {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 40px;
}
.navTitle.tight {
  margin-bottom: 15px;
}
.readerNavMenu .navTitle h1,
.singlePanel .readerNavMenu .navTitle h1 {
  margin-bottom: 0;
}
.navTitle + .dedication {
  margin-bottom: 20px;
}
.navSidebarModule + .dedication {
  margin-top: -30px;
}
.navTitle .languageToggle,
.header .languageToggle {
  text-align: center;
  color: #ccc;
  display: inline-block;
  width: 32px;
  height: 32px;
  border: 1px solid #ccc;
  border-radius: 6px;
  line-height: 34px;
  cursor: pointer;
  font-size: 22px;
}
.navTitleTab {
  margin-inline-end: 26px;
  color: #999;
}
.navTitleTab:hover {
  color: inherit;
  text-decoration: none;
}
.navTitleTab.current {
  color: inherit;
  pointer-events: none;
}
.readerNavMenu h1 .navTitleTab img {
  height: 14px;
  margin-inline-end: 6px;
  opacity: 0.4;
}
.navTitleTab.current img {
  opacity: 0.6;
}
.sidebarLayout {
  display: flex;
  flex-direction: row;
}
@media (max-width: 500px) {
  .sidebarLayout {
    flex-direction: column;
  }
} 
.interface-hebrew .sidebarLayout {
  direction: rtl;
}
.readerPanel.hebrew .followsContentLang {
  direction: rtl;
}
/* ... */

